# gumbo_pp

./: .editorconfig  CMakeLists.txt  readme.md  vcpkg.json
cmake/: daw-gumbo-ppConfig.cmake.in  gumbo-ppConfig.cmake.in  gumbo_ppConfig.cmake.in
cmake/test_project/: CMakeLists.txt  test.cpp
include/daw/: gumbo_pp.h
include/daw/gumbo_pp/: gumbo_algorithms.h  gumbo_handle.h  gumbo_matchers.h  gumbo_node_iterator.h  gumbo_selector.h  gumbo_text.h  gumbo_util.h  gumbo_vector_iterator.h
include/daw/gumbo_pp/details/: find_attrib_if_impl.h  gumbo_pp.h  gumbo_text_iterator.h
src/: gumbo_pp.cpp
tests/: CMakeLists.txt
tests/src/: table_scrape.cpp  test.cpp
